<resources>
    <string name="app_name">Charitybook</string>
    <string name="app_id">172436992923336</string>
    <string name="action_settings">Settings</string>
    <string name="btnLoginTekst">Login</string>
    <string name="btnGegevensOpslaanTekst">Gegevens onthouden</string>
    <string name="etxtGebruikersnaamHint">Gebruikersnaam</string>
    <string name="etxtWachtwoordHint">Wachtwoord</string>
    <string name="fbloginscreen">Logging in&#8230;</string>
    <string name="title_activity_about">Over deze App</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_nieuw_overzicht">Nieuwsoverzicht</string>
    <string name="title_activity_category">Categorie</string>
    <string name="category_dieren">Dieren</string>
    <string name="category_overig">Overige goede doelen</string>
    <string name="category_noodhulp">Noodhulp</string>
    <string name="category_ziekten_en_aandoeningen">Ziekten en aandoeningen</string>
    <string name="category_ontwikkelingshulp">Ontwikkelingshulp</string>
    <string name="category_natuur_en_milieu">Natuur en milieu</string>
    <string name="category_vluchtelingenhulp">Vluchtelingenhulp</string>
    <string name="goede_doelen">Goede doelen</string>
    <string name="nieuws">Nieuws</string>
    <string name="info">Informatie</string>
    <string name="charity_steun">Laat zien dat u geeft om dit goede doel. Deel uw mening met uw vrienden! Laten zien dat u een goed doel steunt kan inspireren en activeren.</string>
    <string name="steun">Steun dit goede doel</string>
    <string name="url">De officiële website</string>
    <string name="donate">Klik hier om te doneren</string>
    <string name="share">Klik hier om te delen</string>
    <string name="wnf_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun het WNF dan ook door te doneren of mee te doen aan hun vele projecten.</string>
    <string name="wspa_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun het WSPA dan ook door te doneren en vergeet u niet voor de dieren te laten horen. </string>
    <string name="kattenbond_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun de Sophia Kattenbond dan ook door te doneren of door lid te worden. </string>
	<string name="vereeniging_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun de Sophia Vereeniging dan ook door te doneren of door lid te worden.  </string>
	<string name="dierenlot_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun de Stichting DierenLot dan ook door te doneren of kom zelf in actie voor de dieren. </string>
	<string name="brooke_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun de Brooke Hospital dan ook door te doneren of door naar verantwoorde toeristische locaties te gaan. </string>
	<string name="greenpeace_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun het Greenpeace dan ook door te doneren en kijk op de website om te zien op welke andere manieren u allemaal ook kunt helpen. </string>
	<string name="natuurmonumenten_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun de Natuurmonumenten dan ook door te doneren of door lid te worden. </string>
	<string name="milieudefensie_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun de Milieudefensie dan ook door te doneren of wordt vrijwilliger.</string>
    <string name="unicef_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun Unicef dan ook door te doneren of kijk op de website om te zien op welke andere manieren u allemaal ook kunt helpen.</string>
	<string name="legerdesheils_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun het Leger des Heils dan ook door te doneren of te collecteren.</string>
    <string name="terredeshommes_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun Terre des Hommes dan ook door te doneren.</string>
    <string name="soskinderdorpen_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun SOS Kinderdorpen dan ook door te doneren.</string>
    <string name="plannederland_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun Plan Nederland dan ook door te doneren of te sponoren.</string>
    <string name="vluchtelingenwerknederland_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun VluchtelingenWerk Nederland dan ook door te doneren of een vrijwillger te worden.</string>
    <string name="kwfkankerbestrijding_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun KWF Kankerbestrijding dan ook door te doneren.</string>
    <string name="longfonds_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun het Longfonds dan ook door te doneren.</string>
    <string name="reumafonds_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun het Reumafonds dan ook door te doneren.</string>
    <string name="alzheimernederland_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun Alzheimer Nederland dan ook door te doneren.</string>
    <string name="nationaalepilepsiefonds_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun het Nationaal Epilepsie Fonds dan ook door te doneren.</string>
    <string name="hartstichting_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun de Hartstichting dan ook door te doneren.</string>
    <string name="verenigingdezonnebloem_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun Vereniging De Zonnebloem dan ook door te doneren.</string>
    <string name="kika_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun Kika dan ook door te doneren.</string>
    <string name="maagleverdarmstichting_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun de Maag Lever Darm Stichting dan ook door te doneren.</string>
    <string name="fightcancer_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun Fight Cancer dan ook door te doneren.</string>
    <string name="warchild_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun War Child dan ook door te doneren of doe mee aan acties.</string>
    <string name="diabetesfonds_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun het Diabetes Fonds dan ook door te doneren.</string>
    <string name="nsgk_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun de NSGK dan ook door te doneren.</string>
    <string name="stopaidsnow_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun STOP AIDS NOW! dan ook door te doneren</string>
    <string name="nierstichting_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun de Nierstichting dan ook door te doneren</string>
    <string name="amnestyinternational_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun Amnesty International dan ook door te doneren</string>
    <string name="cliniclownsnederland_steun">Wilt u meer helpen dan alleen uw steun aan anderen laten zien? Steun CliniClowns dan ook door te doneren</string>
    <string name="wnf_info">Het Wereld Natuur Fonds zet zich op veel manieren in voor bedreigde diersoorten. Allereerst natuurlijk door de bescherming in hun eigen gebied door middel van verschillende veldprojecten. Bijvoorbeeld door trainen en financieren van anti-stropersbrigades. Maar ook door samen met de lokale bevolking te zoeken naar alternatieve, duurzame bronnen van inkomen en haar te helpen conflicten met wilde dieren te voorkomen. </string>
    <string name="wspa_info">De World Society for the Protection of Animals (WSPA) is een internationale dierenwelzijnsorganisatie. Onze visie is een wereld waarin dierenwelzijn ertoe doet en wreedheid tegen dieren niet meer bestaat. We pakken dierenleed direct aan en werken nauw samen met lokale organisaties om dieren ter plekke te helpen. </string>
    <string name="kattenbond_info">De Sophia KattenBond komt op voor alle katten in Nederland: ‘gewone’ huiskatten, zwerfkatten en raskatten. Zij zet zich in voor beschermende wetgeving rondom de kattenhandel en de raskattenfokkerij en houdt zich bezig met het zwerfkattenprobleem. Door regelmatig een KattenActie te organiseren, ondersteunt de Sophia KattenBond vrijwilligersorganisaties die opkomen voor zwerfkatten. Op die manier kan het enorme aantal zwerfkatten in Nederland ingeperkt worden en blijven de dieren gezond. Ook andere organisaties die zich inzetten voor het welzijn van katten, kunnen deelnemen aan een KattenActie van de Sophia KattenBond.</string>
	<string name="vereeniging_info">De Koningin Sophia-Vereeniging tot Bescherming van Dieren is een dierenorganisatie die dierenleed al bestrijdt sinds 1867. Niet pas als het kwaad is geschied, maar preventief door voorlichting te geven over het natuurlijke gedrag, de aanschaf, de opvoeding en de verzorging van huisdieren. Want hoe goed hun bedoelingen ook zijn, veel eigenaren zijn zich nauwelijks bewust van de natuurlijke behoeften van hun dier. En dan gaat het fout: dieren worden behandeld alsof het mensen zijn, ze krijgen verkeerde voeding, hebben lichamelijke klachten, verpieteren eenzaam in een hokje of ze gaan van ellende afwijkend gedrag vertonen.</string>
	<string name="dierenlot_info">Vele dieren lijden een buitengewoon beroerd bestaan; ook in Nederland. Ze worden opgesloten in veel te kleine hokken...... soms ernstig mishandeld...... of zonder pardon op straat gezet en aan hun lot overgelaten. Eenzaam moeten ze dan op zoek naar wat voedsel en een veilige plek om te schuilen. Stichting DierenLot trekt zich het lot van deze dieren erg aan.</string>
	<string name="brooke_info">Voor veel paarden en ezels in landen als India en Egypte is het leven afschuwelijk. De werkdieren moeten ploeteren in ondraaglijke temperaturen, worden verwaarloosd en krijgen nog stokslagen ook. De eigenaren van de dieren zijn straatarm. Zij zijn druk met overleven en hebben geen aandacht voor hun paard of ezel. Brooke Hospital for Animals trekt zich het lot van deze dieren en mensen aan. Met een netwerk van eigen mobiele teams en dierenklinieken geeft Brooke gratis diergeneeskundige hulp en voorlichting over dierenwelzijn. Door de leefomstandigheden van werkdieren te verbeteren, helpt Brooke ook de straatarme mensen die voor hun levensonderhoud van de dieren afhankelijk zijn.</string>
	<string name="greenpeace_info">Greenpeace zet zich in voor een schone en gezonde wereld. Daarom doet Greenpeace onderzoek, vertellen ze mensen over milieuproblemen en praten ze met bedrijven, ministers en andere belangrijke mensen. En als die niet luisteren, voert Greenpeace actie zonder vormen van geweldpleging. Net zolang als dat nodig is.</string>
	<string name="natuurmonumenten_info">Natuurmonumenten is een vereniging die midden in de maatschappij staat. Daarom hebben leden een stem: via afgevaardigden kunnen leden hun mening laten doorklinken in de besluiten en standpunten van de vereniging.  In districtscommissies vertegenwoordigen leden de stem van de leden in hun district. Natuurmonumenten kent dertien districten: de alle twaalf provincies plus Amsterdam. De districtscommissies vormen samen de verenigingsraad. Samen met het bestuur denkt, praat en beslist de verenigingsraad mee over de hoofdlijnen van het beleid.</string>
    <string name="wnf_title">Wereld Natuur Fonds</string>
</resources>