<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CharityWNFInfoActivity"  
    android:background="@color/main_blue">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="25sp"
        android:text="@string/wnf_title"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtvInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/textView1"
        android:layout_alignTop="@id/textView1"
        android:layout_marginTop="40dp"
        android:text="@string/wnf_info"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txtvDonate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/txtvInfo"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:text="@string/donate"
        android:textSize="20sp"
       android:onClick="goToWebsite"                
       android:clickable="true" />

    <TextView
        android:id="@+id/txtvURL"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/txtvDonate"
        android:layout_alignLeft="@id/txtvDonate"
        android:layout_marginTop="25dp"
        android:text="@string/url"
        android:textSize="20sp"
       android:onClick="goToDonate"                
       android:clickable="true" />

</RelativeLayout>
