<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CategoryVluchtelingenhulpActivity" 
    android:background="@color/main_blue" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/category_vluchtelingenhulp"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <Button
        android:id="@+id/btnGoedeDoelen"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/btnNieuws"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textSize="20sp" 
        
        android:text="@string/goede_doelen" />

    <Button
        android:id="@+id/btnNieuws"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:textSize="20sp" 
        
        android:text="@string/nieuws" />

</RelativeLayout>