<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CharityWNFMainActivity" 
    android:background="@color/main_blue" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="25sp"
        android:text="@string/wnf_title"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnInfo"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/info" />

    <Button
        android:id="@+id/btnSteun"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/btnInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/steun" />

    <Button
        android:id="@+id/btnComments"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/btnSteun"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/comments" />

</RelativeLayout>