<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CharitySupportActivity"  
    android:background="@color/main_blue">

    <Button
        android:id="@+id/btnSteun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/steun"
        android:textSize="15sp"
   		android:onClick="onClick"/>

    <TextView
        android:id="@+id/tvSupport"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tvSteun"
        android:layout_below="@+id/btnSteun"
        android:layout_marginTop="31dp"
        android:textColor="@color/main_white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvDonate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSupport"
        android:layout_below="@+id/tvSupport"
        android:layout_marginTop="18dp"
        android:clickable="true"
        android:text="@string/donate"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvSteun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSteun"
        android:layout_alignRight="@+id/tvTitleSupport"
        android:layout_marginBottom="27dp"
        android:text="@string/charity_steun"
        android:textColor="@color/main_white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvTitleSupport"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="33dp"
        android:textColor="@color/main_white"
        android:textSize="25sp" />

</RelativeLayout>